# bddb

./: .gitignore  .rustfmt.toml  Cargo.toml  next.md
src/: bdd.rs  lang.rs  main.rs  testutil.rs  util.rs
src/bdd/: counter.rs  database.rs  domain.rs  evaluator.rs  relation.rs
src/lang/: ast.rs  datalog_lalr.rs  datalogparser.lalrpop  graph.rs  ir.rs  source.rs
src/testutil/: core.rs  matchers.rs  types.rs
src/testutil/matchers/: contains.rs  contains_in_order.rs  empty.rs  equal_to.rs  matches.rs
src/util/: compiler.rs  sets.rs
